--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -840,6 +840,7 @@ select.common-field {
     display: flex;
     align-items: flex-start;
     gap: 10px;
+    background: #fff;
 }
 .work-count
 {
@@ -1317,6 +1318,472 @@ input[type="date"].common-field
 .common-field[type="date"].invalid-field
 {
     padding-right: 30px;
+}
+
+.cv-template1 .cv-heading {
+    color: #fff;
+    font-size: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    border-bottom: 1px solid #fff;
+}
+
+.contact-dev-info {
+    padding-left: 30px;
+}
+
+.cv-template1 .cv-subheading {
+    font-size: 17px;
+    color: #fff;
+    font-weight: 500;
+}
+
+.cv-template1 .cv-text {
+    font-size: 16px;
+    color: #e8e8e8;
+    font-weight: 400;
+}
+
+.cv-template1 .cv-listing {
+    list-style: disc;
+    padding-left: 20px;
+    color: #e8e8e8;
+}
+
+.cv-template1 .skills-item {
+    margin-bottom: 8px;
+    font-size: 14px;
+}
+
+.personal-info>div {
+    margin-bottom: 30px;
+}
+
+.personal-info>div:last-child {
+    margin-bottom: 0px;
+}
+
+.cv-template1 .cv-heading.cv-dark-text {
+    color: #121212;
+    font-size: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    border-bottom: 1px solid #121212;
+}
+
+.cv-template1 .personal-details {
+    padding: 40px 0;
+}
+
+.cv-template1 .developer-name {
+    font-size: 32px;
+    font-weight: 400;
+    color: #121212;
+}
+
+.cv-template1 .developer-position {
+    color: #383838;
+    font-size: 20px;
+}
+
+.about-bio-text {
+    font-size: 16px;
+    color: #121212;
+}
+
+.profession-section>div:not(.personal-details) {
+    padding-left: 30px;
+    margin-bottom: 20px;
+}
+
+.profession-section>div:not(.personal-details):last-child {
+    margin-bottom: 0px;
+}
+
+.connect-listing {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.connect-listing a {
+    font-size: 20px;
+    background: var(--primary-color);
+    color: var(--white);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+}
+
+.experience-timeline {
+    position: relative;
+    padding-left: 40px;
+}
+
+.experience-timeline .exper-year {
+    margin-bottom: 6px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.experience-timeline .company-name-text {
+    font-size: 17px;
+    font-weight: 600;
+    margin-bottom: 6px;
+}
+
+.experience-timeline .exper-timeline-item {
+    position: relative;
+    margin-bottom: 35px;
+}
+
+.experience-timeline .exper-timeline-item:before {
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border: 1px solid var(--primary-color);
+    border-radius: 50%;
+    background-color: var(--white);
+    left: -30px;
+    top: 6px;
+}
+
+.experience-timeline:before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    width: 1px;
+    height: calc(100% - 100px);
+    background: var(--primary-color);
+}
+
+.cv-template1 .cv-subheading.cv-dark-text {
+    color: #121212;
+}
+
+.personal-details {
+    max-width: 60%;
+}
+
+.contact-information {
+    background-color: #f5f7ff;
+}
+
+.contact-information .cv-heading {
+    font-size: 22px;
+    font-weight: 700;
+}
+.contact-information .cv-subheading {
+    font-size: 17px;
+    font-weight: 600;
+}
+
+.card-box {
+    padding: 30px;
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(90, 0, 0, .05);
+}
+
+.project-wrapper {
+    padding: 12px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+}
+
+.project-wrapper .project-title {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.project-wrapper .project-date {
+    font-size: 13px;
+}
+
+.project-role {
+    font-size: 12px;
+    display: inline-block;
+    color: #121212;
+    padding: 3px 10px;
+    background: #f4f4f5;
+    border-radius: 10px;
+}
+
+.exp-timeline {
+    margin-top: 20px;
+}
+
+.role-text {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 4px;
+    line-height: 1;
+}
+
+.exp-timeline .exp-date {
+    font-size: 14px;
+    margin-bottom: 4px;
+    color: #646464;
+}
+
+.exp-timeline .loc-text {
+    font-size: 14px;
+    color: #646464;
+    max-block-size: 10px;
+}
+
+.exp-timeline .exp-desc {
+    font-size: 15px;
+    margin-bottom: 0px;
+}
+
+.exp-timeline .sub-exp {
+    position: relative;
+    padding-left: 30px;
+    margin-bottom: 16px;
+}
+
+.exp-timeline .sub-exp::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #d3d3d3;
+    border: 1px solid #fff;
+}
+
+.exp-timeline .sub-exp::after {
+    content: '';
+    position: absolute;
+    top: 17px;
+    left: 4px;
+    width: 1px;
+    height: calc(100% - 8px);
+    border: 1px solid #d3d3d3;
+}
+
+.exp-timeline .sub-exp.currently::after {
+    height: calc(100% - 18px);
+    border: 1px dashed #d3d3d3;
+}
+.about-info {
+    border-left: 1px solid var(--grey);
+    border-bottom: 1px solid var(--grey);
+    padding-bottom: 30px;
+    position: relative;
+}
+.subheading-resume {
+    font-size: 17px;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+.ratinng-wrapper {
+    /* display: flex;
+    justify-content: space-between;
+    align-items: center; */
+    margin-bottom: 15px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.ratinng-wrapper .rating-progress {
+    width: 90px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 90px;
+}
+
+.ratinng-wrapper .rating-bx span {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    opacity: .2;
+}
+
+.ratinng-wrapper .rating-bx span.active {
+    width: 38px;
+    height: 38px;
+    opacity: 1;
+}
+
+.ratinng-wrapper .rating-bx span.very-poor {
+    background-color: #ffb3b0;
+    color: #7f1c1e;
+}
+
+.ratinng-wrapper .rating-bx span.poor {
+    background-color: #ffd6d6;
+    color: #991b1b;
+}
+
+.ratinng-wrapper .rating-bx span.neutral {
+    background-color: #fdefb9;
+    color: #92400d;
+}
+
+.ratinng-wrapper .rating-bx span.good {
+    background-color: #d2f579;
+    color: #3f6212;
+}
+
+.ratinng-wrapper .rating-bx span.very-good {
+    background-color: #a8ff58;
+    color: #365313;
+}
+
+.ratinng-wrapper p {
+    margin-bottom: 0px;
+}
+.rating-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.social-media {
+    color: var(--primary);
+
+}
+
+.expertise-card {
+    margin-bottom: 9px;
+    display: inline-block;
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    min-width: 117px;
+    margin-right: 10px;
+}
+
+.expertise-card img {
+    width: 50px;
+    height: 50px;
+    display: block;
+    margin: auto;
+}
+
+.expertise-card .expertise-exp {
+    width: auto;
+    padding: 3px 10px;
+    background: #f3f3f3;
+    border-radius: 30px;
+    border: 1px solid #ccc;
+    display: inline-block;
+    line-height: 1;
+    margin-bottom: 0;
+    font-size: 13px;
+}
+
+.expertise-card .expertise-skill {
+    font-size: 13px;
+    margin-bottom: 0;
+    font-weight: 600;
+}
+.cv-header-wrapper {
+    padding: 13px;
+    background: var(--primary);
+    border-radius: 14px;
+    color: #fff;
+}
+.skills-pill li {
+    display: inline-block;
+    margin-right: 9px;
+    margin-bottom: 9px;
+}
+
+.skills-pill li span {
+    display: inline-block;
+    padding: 5px 14px;
+    color: var(--white);
+    background: var(--primary-color);
+    border-radius: 6px;
+    font-size: 14px;
+}
+.resume-basic-info {
+    padding-bottom: 30px;
+    border-bottom: 1px solid var(--grey);
+    position: relative;
+    margin-bottom: 20px;
+}
+.resume-imgbx {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
+
+.resume-imgbx .resume-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.resume-name {
+    text-transform: uppercase;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+
+.resume-designation {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 17px;
+    color: var(--primary-color);
+}
+.exp-wrapper {
+    margin-bottom: 29px;
+}
+
+.exp-wrapper .exp-year {
+    font-size: 18px;
+    color: #121212;
+    font-weight: 600;
+}
+
+.exp-role {
+    list-style: disc;
+    padding-left: 30px;
+}
+.personal-info-wrapper>div p {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    gap: 7px;
+}
+
+.personal-info-wrapper>div:not(:last-child) p::after {
+    content: "|";
+    position: relative;
+    display: inline-block;
+    font-size: 15px;
+    margin-left: 0px;
+    font-size: 22px;
+    font-weight: 300;
+    color: #a5a5a5;
+}
+
+.personal-info-wrapper>div p span {
+    font-size: 18px;
+    line-height: 1;
+    display: inline-block;
+    color: #a5a5a5;
 }
 @media only screen and (max-width: 1550px) {
     .common-field {
