Worked on changes

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1182,7 +1182,7 @@ select.common-field {
     right: 10px;
     background: transparent;
     border: none;
-    color: #121212;
+    color: #f6f4f4e6;
     outline: none;
     font-size: 18px;
     cursor: pointer;
